--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <h1>Authentication Using MEAN Stack</h1>
-  <p class="lead">Welcome to our custom MEAN authenticaion application built from scratch </p>
+  <p class="lead">Welcome to our custom MEAN authentication application built from scratch </p>
   <div>
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a> <a class="btn btn-default" [routerLink]="['/login']">Login</a>
   </div>
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col-md-4">
     <h3>Express Backend</h3>
-    <p>A rock soled Node.js/Express server using Mongoose to organize models and query the database.</p>
+    <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database.</p>
   </div>
   <div class="col-md-4">
     <h3>Angular-CLI</h3>
