compiled angular src

--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron text-center">
   <h1>Authentication Using MEAN Stack</h1>
   <p class="lead">Welcome to our custom MEAN authentication application built from scratch </p>
-  <p>Developed by <a href="https://github.com/cvryn7">Karan Bhagat</a></p>
+  <p class="lead">Developed by <a href="https://github.com/cvryn7">Karan Bhagat</a></p>
   <div>
     <a class="btn btn-primary" [routerLink]="['/register']">Register</a> <a class="btn btn-default" [routerLink]="['/login']">Login</a>
   </div>
